Revert "Revert "TFP-6470 felles 7.9.0 - standard jackson3"" (#77)
* Revert "Revert "TFP-6470 felles 7.9.0 - standard jackson3" (#76)"

This reverts commit eb5d82bb003b600f2eaeb8074e95d784e6a55e47.

* Bruk String/Long i Dtos framfor objekt